<resources>
    <string name="app_name">FasTre</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="age">Age</string>
    <string name="blood_type">Blood Type</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_hospital">Hospital</string>
    <string name="title_medical_records">Medical Records</string>
    <string name="title_profile">Profile</string>
    <string name="title_news">News</string>
    <string name="title_setting">Settings</string>
    <string name="fastre">FasTre</string>
    <string name="email">fastre.team@gmail.com</string>
    <string name="logo">this is logo</string>
    <string name="email_logo">this is email</string>
    <string name="phone_logo">this is number phone</string>
    <string name="text_information">Information</string>
    <string name="text_call_hospital">Call Hospital</string>
    <string name="text_location">Location</string>
    <string name="text_whatsapp">Whatsapp</string>
    <string name="text_hospital_s_preview">Hospital\'s Preview</string>
    <string name="text_news">NEWS</string>
    <string name="text_bookmarked_news">Bookmarked News</string>
    <string name="btn_whatsapp">this is send whatsapp button</string>
    <string name="btn_location">this is location button</string>
    <string name="btn_callHospital">this is hospital button</string>
    <string name="btn_back">this is back button</string>
    <string name="btn_go_to_bookmarked">this is go to bookmarked button</string>
    <string name="btn_bookmarked">this is bookmarked button</string>
    <string name="button_changeLanguage">Language</string>
    <string name="button_aboutUs">About Us</string>
    <string name="button_logout">Logout</string>
    <string name="button_readMore">Read more</string>
    <string name="news_date">this is news date</string>
    <string name="news_title">this is news title</string>
    <string name="news_poster">this is news poster</string>
    <string name="news_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="logout_succes">Logout successful!</string>
    <string name="asking_to_logout">Do you want to logout from this account?</string>
    <string name="you_don_t_have_any_bookmarked_news">You don\'t have any bookmarked news.</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_pw">Forgot Password</string>
    <string name="text_medical_records">Medical Records</string>
    <string name="poli_s_name">POLI\'s NAME</string>
    <string name="this_is_hospital_preview_poster">this is hospital preview poster</string>
    <string name="this_is_queue_number">this is queue number</string>
    <string name="queue_s_number_right_now">Queue\'s number right now</string>
    <string name="this_is_your_queue_number">this is your queue number</string>
    <string name="your_queue_number">Click here to get the queue number</string>
    <string name="your_queue_number2">Your queue number</string>
    <string name="check_the_estimated_waiting_time">Estimated waiting time: </string>
    <string name="doctor_s_name">Doctor\'s name</string>
    <string name="doctor_s_poly">Doctor\'s poly</string>
    <string name="schedule">Schedule</string>
    <string name="this_is_swipe_left_symbol">this is swipe left button</string>
    <string name="this_is_swipe_right_symbol">this is swipe right button</string>
    <string name="register_name">Full name is required</string>
    <string name="register_age">Age is required</string>
    <string name="register_blood_type">Blood Type is required</string>
    <string name="register_email">Email is required</string>
    <string name="register_wrong_email">Please provide valid email</string>
    <string name="register_password">Password is required</string>
    <string name="register_wrong_password">Minimum Password length is 6</string>
    <string name="register_failed">"User failed to register"</string>
    <string name="register_success">User Has been Registered Successfully, Verification Email Will be Sent Within 5 minutes</string>
    <string name="forgot_pw_succes">Check Your email to reset Password</string>
    <string name="forgot_pw_failed">Try Again, Something Wrong Happen</string>
    <string name="login_success">Login Successful</string>
    <string name="login_not_verified">"Check Your Email Verification"</string>
    <string name="login_failed">"Failed to Login, Please Check Your Email/Password again."</string>
    <string name="hospital_name">Hospital</string>
    <string name="click_me">Click Me!</string>
    <string name="_0">0</string>
    <string name="please_wait">Please wait</string>
    <string name="n_minute">n </string>
    <string name="minute">minute</string>
    <string name="this_is_icon_id">this is icon id</string>
    <string name="this_is_icon_poly">this is icon poly</string>
    <string name="this_is_icon_number">this is icon number</string>
    <string name="this_is_medical_background">this is medical background</string>
    <string name="queue_number">Queue number:</string>
    <string name="swipe_poly">Swipe left to see the other polyclinics.</string>
    <string name="title_schedule">Schedule</string>
</resources>