<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="16dp"
    style="@style/CardView.Light">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#142C44">

        <TextView
            android:id="@+id/tv_polyName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/poli_s_name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/iv_queue"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_circle"
            app:layout_constraintBottom_toBottomOf="@+id/btn_getQueue"
            app:layout_constraintEnd_toStartOf="@id/btn_getQueue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_getQueue"
            android:contentDescription="@string/this_is_queue_number" />

        <TextView
            android:id="@+id/text_queue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/queue_s_number_right_now"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/iv_queue"
            app:layout_constraintStart_toStartOf="@+id/iv_queue"
            app:layout_constraintTop_toBottomOf="@+id/iv_queue" />

        <ImageButton
            android:id="@+id/btn_getQueue"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="12dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_circle"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_queue"
            app:layout_constraintTop_toBottomOf="@id/tv_polyName"
            android:contentDescription="@string/this_is_your_queue_number" />

        <TextView
            android:id="@+id/text_userQueue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/your_queue_number"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/btn_getQueue"
            app:layout_constraintStart_toStartOf="@+id/btn_getQueue"
            app:layout_constraintTop_toBottomOf="@id/btn_getQueue" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="15dp"
            android:text="@string/check_the_estimated_waiting_time"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/text_queue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>